# simulator-predictor-hacking

./: .flake8  .gitignore  CITATION.cff  LICENSE  README.md  analyse_generated_results.ipynb  constants.py  create_oracle.py  create_oracles.sh  launcher.sh  launcher_biobj.sh  my_run_goal_directed.py  optimizers.py  predictions.py  predictive_metrics.py  preprocess.py  pyproject.toml  score_layers.ipynb  scores.py  utils.py
assays/processed/: CHEMBL1909140.csv  CHEMBL1909140_test.smiles  CHEMBL1909140_train.smiles  CHEMBL1909203.csv  CHEMBL1909203_test.smiles  CHEMBL1909203_train.smiles  CHEMBL3888429.csv  CHEMBL3888429_test.smiles  CHEMBL3888429_train.smiles  dataset1.csv  dataset1_test.smiles  dataset1_train.smiles  dataset2_test.smiles  dataset2_train.smiles  dataset3_test.smiles  dataset4_test.smiles  irak4_bayer.csv  irak4_merck.csv  irak4_pfizer.csv  irak4_pfizer_train.smiles  irak4_roche.csv  irak4_roche_train.smiles
guacamol_baselines/graph_ga/: crossover.py  goal_directed_generation.py
